Archive2/88/92d2a43412447a/output
main.cpp:4:16: error: ISO C99 does not support '_Noreturn' [-Wpedantic]
 _Noreturn void stop_now() {
                ^
